[gd_scene load_steps=7 format=3 uid="uid://bsn73jg2i75mq"]

[ext_resource type="Script" path="res://Scenes/Natu's Tests/Enemies/(S)CommonEnemy.gd" id="1_xs0qf"]
[ext_resource type="Texture2D" uid="uid://0lc7q05ov14n" path="res://Assets/Main Character/Idle/raw desert.png" id="2_r7ugd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7xaro"]
radius = 511.473

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7k104"]
radius = 69.0
height = 202.0

[sub_resource type="SpriteFrames" id="SpriteFrames_qi2p4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r7ugd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 128.191

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_xs0qf")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
rotation = -2.37719
shape = SubResource("CircleShape2D_7xaro")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7k104")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.499996, -1.12499)
scale = Vector2(0.114258, 0.120931)
sprite_frames = SubResource("SpriteFrames_qi2p4")
animation = &"Idle"

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_4gyqm")

[node name="take_damage_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
